# deployment

./: .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  Dockerfile  Makefile  README.md  package-lock.json  pyproject.toml
.claude/: settings.json
.claude/hooks/: approve-commands.sh
.claude/skills/playwright-cli/: SKILL.md
.claude/skills/release-testing/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: build-and-deploy.yml  pre-commit.yml
ci/docs/: build.sh
ci/release/: update-version.sh
conda/environments/: deployment_docs.yml  deployment_docs_cuda11.5.yml
extensions/: rapids_admonitions.py  rapids_card_toctree.py  rapids_grid_toctree.py  rapids_notebook_files.py  rapids_related_examples.py  rapids_version_templating.py
scripts/: gen_release_checklist_issue.py  gen_release_checklist_issue.sh  unused_images.sh
source/: conf.py  custom-docker.md  hpc.md  index.md  index.rst  local.md  mig.md  nims.md
source/_includes/: check-gpu-pod-works.md  install-rapids-with-docker.md  test-rapids-docker-vm.md
source/_includes/menus/: azure.md  ci.md  gcp.md  nvidia.md
source/_static/css/: custom.css
source/_static/js/: nav.js  notebook-gallery.js
source/_templates/: feedback.html  notebooks-extra-files-nav.html  notebooks-tag-filter.html  notebooks-tags.html
source/cloud/: index.md  index.rst
source/developer/: index.md
source/examples/: helper_functions.py  index.md
source/guides/: caching-docker-images.md  colocate-workers.md  deploy-dask-spark.md  index.md  l4-gcp.md  mig.md  rapids-docker-with-cuda.md  scheduler-gpu-optimization.md  scheduler-gpu-requirements.md
source/hpc/: htcondor.md  index.md  pbs.md  slurm.rst
source/kubernetes/: dask-kubernetes.md  index.md
source/local/: conda.rst  index.rst
source/nims/: index.md  nemo.md
source/tools/: dask-cuda.md  index.md  rapids-docker.md
testing/: deploy_eks..py  deploy_eks.sh  deploy_eks_docker.sh
(+156 files in other folders)
