[project]
name = "rapids-deployment-docs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sphinx>=8.2.3",
    "myst-nb>=1.1.2",
    "myst-parser>=4.0.0",
    "nbsphinx>=0.9.5",
    "numpydoc>=1.8.0",
    "pydata-sphinx-theme>=0.15.4",
    "pre-commit>=3.8.0",
    "sphinx>=8.0.2",
    "sphinx-autobuild>=2024.9.19",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-mermaid>=1.0.0",
    "python-frontmatter>=1.1.0",
    "sphinx-reredirects"
]

[tool.codespell]
# note: pre-commit passes explicit lists of files here, which this skip file list doesn't override -
skip = "./.git,./pyproject.toml,./.ruff_cache"
ignore-regex = "\\b(.{1,4}|[A-Z]\\w*T)\\b"
builtin = "clear"
quiet-level = 3

[tool.ruff]
fix = true
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pyflakes
    "F",
    # isort
    "I",
    # numpy
    "NPY",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B"
]

[tool.ruff.lint.per-file-ignores]
"source/examples/**/*.ipynb" = [
    # "module level import not at top of cell".
    # This is sometimes necessary, for example to ship a self-contained function
    # around with Dask.
    "E402",
]
"source/examples/rapids-ec2-mnmg/notebook.ipynb" = [
    # "undefined name cluster", because in this notebook we recommend, in a markdown
    # cell, creating a Dask cluster separately and then running the rest of the notebook's code
    "F821",
]
"source/examples/rapids-sagemaker-higgs/notebook.ipynb" = [
    # "Line too long", because of a 1-liner shell command starting with '!'
    "E501",
]
"source/examples/xgboost-dask-databricks/notebook.ipynb" = [
    # "undefined name spark" because Databricks magically makes a SparkSession
    # available with name 'spark'
    # ref: https://docs.databricks.com/en/migration/spark.html#remove-sparksession-creation-commands
    "F821",
]
